test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/onpolicyupdate/basic-create-policy(deprecated)/chainsaw-step-01-apply-1-2.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: test-secret-3
  namespace: staging-3
type: Opaque
