test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/onpolicyupdate/basic-create-policy(deprecated)/chainsaw-step-01-apply-1-3.yaml
apiVersion: v1
data:
  foo: bar
kind: ConfigMap
metadata:
  name: dictionary-3
  namespace: staging-3
